# ElectricityConsumption

./: GBM.ipynb  README.md  pyproject.toml
